--- a/admin/css/activities-admin.css
+++ b/admin/css/activities-admin.css
@@ -12,6 +12,10 @@
   white-space: pre-line;
 }
 
+.acts-hidden {
+  display: none;
+}
+
 .activities-box-wrap {
   background-color: #fff;
   border: 1px solid lightgrey;
@@ -524,7 +528,6 @@
   padding: 7px 0px;
 }
 
-
 .acts-quick-edit-header {
   display: block;
   font-size: 18px;
@@ -544,7 +547,7 @@
 
 .acts-quick-edit-group {
   min-width: 300px;
-  width: 48%;
+  width: 49%;
   padding: 5px 0px;
 }
 
