Added buttons to markand unmark all sessions of a selected number. Added a filter so that one can use textareas and countries list on the quick edit box. Fixed some bugs.

--- a/admin/css/activities-admin.css
+++ b/admin/css/activities-admin.css
@@ -280,6 +280,11 @@
   100% { transform: rotate(360deg); }
 }
 
+#acts-time-mark {
+  float: right;
+  width: 50px;
+}
+
 #acts-nice-custom li input[type=text] {
   width: 55%;
 }
@@ -465,8 +470,13 @@
   padding: 5px 0px;
 }
 
-.acts-quick-edit-group input {
-  width: 100%
+.acts-quick-edit-group input,
+.acts-quick-edit-group textarea {
+  width: 100%;
+}
+
+.acts-quick-edit-group textarea {
+  height: 150px;
 }
 
 .acts-quick-img-wrap {
