--- a/admin/css/activities-admin.css
+++ b/admin/css/activities-admin.css
@@ -342,6 +342,10 @@
   vertical-align: middle;
 }
 
+.acts-nice-custom .acts-nice-custom-split input[type=submit] {
+  vertical-align: top;
+}
+
 .acts-nice-custom li input[col],
 .acts-nice-custom li .delete-custom,
 .acts-nice-custom li #add-color,
