--- a/admin/css/activities-admin.css
+++ b/admin/css/activities-admin.css
@@ -265,7 +265,7 @@
   height: 50px;
   font-size: 50px;
   position: absolute;
-  right: 18px;
+  right: 0;
   z-index: 2;
 }
 
@@ -278,7 +278,7 @@
   height: 52px;
   margin: 0;
   position: absolute;
-  right: 19px;
+  right: 0;
   z-index: 3;
   opacity: 0;
 }
@@ -711,6 +711,11 @@
     margin: 0 2px 2px 0;
   }
 
+  #acts-nice-settings {
+    right: -12px !important;
+    padding-right: 12px !important;
+  }
+
   .acts-nice-user-row {
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
@@ -782,7 +787,7 @@
 
   #acts-nice-settings-wrap {
     position: absolute;
-    right: -20px;
+    right: 0;
     top: -53px;
   }
 
@@ -791,8 +796,12 @@
   }
 
   #acts-nice-settings {
-    z-index: 1;
     display: none;
+    position: absolute;
+    right: -20px;
+    padding-right: 20px;
+    border-right: none;
+    z-index: 1;
   }
 }
 
