--- a/admin/css/activities-admin.css
+++ b/admin/css/activities-admin.css
@@ -711,6 +711,15 @@
     margin: 0 2px 2px 0;
   }
 
+  .acts-wrap .tablenav .tablenav-pages {
+    margin-top: 10px;
+  }
+  .acts-wrap .tablenav.bottom .displaying-num {
+    position: static;
+    display: block;
+    margin-bottom: 15px;
+  }
+
   #acts-nice-settings {
     right: -12px !important;
     padding-right: 12px !important;
