Fixed and added bulk actions. Added first version of plans print on reports.

--- a/admin/css/activities-admin.css
+++ b/admin/css/activities-admin.css
@@ -480,6 +480,10 @@
   border-style: dashed;
 }
 
+#acts-nice-save-bottom {
+  display: none;
+}
+
 #acts-nice-preview {
   border: 1px solid lightgrey;
   background-color: #fff;
@@ -887,6 +891,10 @@
     padding-right: 20px;
     border-right: none;
     z-index: 1;
+  }
+
+  #acts-nice-save-bottom {
+    display: inline-block;
   }
 }
 
